# src/csharp/Atlas.Generators.Events/BUILD.bazel

load("//tools/dotnet:dotnet_build.bzl", "atlas_dotnet_project")

atlas_dotnet_project(
    name = "atlas_generators_events_dll",
    project_file = "Atlas.Generators.Events.csproj",
    assembly_name = "Atlas.Generators.Events.dll",
    srcs = glob(
        ["**/*.cs"],
        exclude = ["obj/**", "bin/**"],
    ) + ["Atlas.Generators.Events.csproj"],
    visibility = ["//visibility:public"],
)
