# src/csharp/Atlas.Runtime/BUILD.bazel

load("//tools/dotnet:dotnet_build.bzl", "atlas_dotnet_project")

atlas_dotnet_project(
    name = "atlas_runtime_dll",
    project_file = "Atlas.Runtime.csproj",
    assembly_name = "Atlas.Runtime.dll",
    srcs = glob(
        ["**/*.cs"],
        exclude = ["obj/**", "bin/**"],
    ) + ["Atlas.Runtime.csproj"],
    project_deps = [
        "//src/csharp/Atlas.Shared:atlas_shared_dll",
        "//src/csharp/Atlas.Generators.Events:atlas_generators_events_dll",
    ],
    visibility = ["//visibility:public"],
)
