# src/csharp/Atlas.Shared/BUILD.bazel

load("//tools/dotnet:dotnet_build.bzl", "atlas_dotnet_project")

atlas_dotnet_project(
    name = "atlas_shared_dll",
    project_file = "Atlas.Shared.csproj",
    assembly_name = "Atlas.Shared.dll",
    srcs = glob(
        ["**/*.cs"],
        exclude = ["obj/**", "bin/**"],
    ) + ["Atlas.Shared.csproj"],
    visibility = ["//visibility:public"],
)
